@@ -5,4 +5,3 @@
 #define PQXX_HAVE_GCC_DEPRECATED 1
 #define PQXX_HAVE_GCC_NORETURN 1
 #define PQXX_HAVE_GCC_PURE 1
-#define PQXX_HAVE_LONG_DOUBLE 1
